--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="wishMessage">Make a wish </div>
 
 <audio id="bgMusic" loop>
-  <source src="audio/background-music.mp3" type="audio/mpeg">
+  <source src="background-music.mp3" type="audio/mpeg">
 </audio>
 
 <button id="musicToggle">Play Music 🎵</button>
